fixtures/modules/cjs_syntax_error/bad.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: Expected ident
 --> modules/cjs_syntax_error/bad.js:2:10
2 | function {{{ invalid
  |          ^

