fixtures/modules/cjs_syntax_error/bad.js
// Module with syntax error
function {{{ invalid
